# phones_crawler

./: .gitignore  logger.py  pyproject.toml  scrapy.cfg
phones_crawler/: middlewares.py  settings.py
phones_crawler/spiders/: phones.py
