[tool.poetry]
name = "pnones-parser"
version = "0.1.0"
description = ""
authors = ["Kamo develop <kamodeveloper@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scrapy = "^2.11.1"
undetected-chromedriver = "^3.5.5"
pandas = "^2.2.1"
scrapy-rotating-proxies = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

